--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
   "name": "webpack-package",
   "version": "0.1.0",
-  "description": "[![github action status](https://github.com/hexlet-boilerplates/webpack-package/workflows/Node%20CI/badge.svg)](https://github.com/hexlet-boilerplates/webpack-package/actions)\r [![Code Climate](https://codeclimate.com/github/hexlet-boilerplates/webpack-package/badges/gpa.svg)](https://codeclimate.com/github/hexlet-boilerplates/webpack-package)",
+  "description": "",
   "type": "module",
   "scripts": {
-    "test": "jest --colors"
+    "test": "jest --colors",
+    "build": "vite build"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/hexlet-boilerplates/webpack-package.git"
   },
-  "author": "Kirill Mokevnin",
+  "author": "Antonio",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/hexlet-boilerplates/webpack-package/issues"
@@ -25,16 +26,14 @@
   },
   "main": "src/init.js",
   "devDependencies": {
-    "@babel/core": "^7.28.0",
+    "@babel/core": "^7.20.12",
     "@babel/eslint-parser": "^7.19.1",
-    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-    "@babel/preset-env": "^7.28.0",
+    "@babel/preset-env": "^7.20.2",
     "@eslint/js": "^9.9.1",
     "ajv": "^8.17.1",
-    "autoprefixer": "^10.4.22",
     "babel-jest": "^29.3.1",
-    "babel-loader": "^9.2.1",
-    "css-loader": "^6.11.0",
+    "babel-loader": "^9.1.2",
+    "css-loader": "^6.7.3",
     "debug": "^4.3.4",
     "eslint": "^8.57.0",
     "eslint-config-airbnb": "^19.0.4",
@@ -43,25 +42,22 @@
     "eslint-plugin-jest": "^27.2.1",
     "file-loader": "^6.2.0",
     "globals": "^15.9.0",
-    "html-webpack-plugin": "^5.6.5",
+    "html-webpack-plugin": "^5.5.0",
     "jest": "^29.3.1",
     "jest-cli": "^29.3.1",
     "jest-environment-jsdom": "^29.3.1",
-    "postcss": "^8.5.6",
-    "postcss-loader": "^7.3.4",
+    "postcss-loader": "^7.2.4",
     "postcss-preset-env": "^7.8.3",
-    "prettier": "^3.6.2",
-    "sass": "^1.94.2",
-    "sass-loader": "^16.0.6",
-    "style-loader": "^3.3.4",
+    "style-loader": "^3.3.1",
     "url-loader": "^4.1.1",
-    "webpack": "^5.103.0",
-    "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^4.15.2",
-    "workbox-webpack-plugin": "^7.4.0"
+    "vite": "^7.2.4",
+    "webpack": "^5.76.0",
+    "webpack-cli": "^5.0.1",
+    "webpack-dev-server": "^4.11.1"
   },
   "dependencies": {
-    "bootstrap": "^5.3.8",
-    "npm-check-updates": "^16.6.2"
+    "npm-check-updates": "^16.6.2",
+    "sass": "^1.57.1",
+    "sass-loader": "^13.2.0"
   }
 }
