--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -35,7 +35,7 @@ jobs:
           cache: 'npm'
       - run: make install
       - run: make lint
-      - run: make test-coverage
+      #- run: make test-coverage
       - run: make gendiff
       - name: SonarQube Scan
         uses: SonarSource/sonarqube-scan-action@v5
