--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -6,9 +6,6 @@ on:
   - push
   - pull_request
 
-env:
-  CI: true
-
 jobs:
   build:
 
@@ -18,11 +15,11 @@ jobs:
     strategy:
       # Node versions list
       matrix:
-        node-version: [20.x]
+        node-version: [22.x]
 
     steps:
-        # Check-out repository under GitHub workspace
-        # https://github.com/actions/checkout
+      # Check-out repository under GitHub workspace
+      # https://github.com/actions/checkout
       - uses: actions/checkout@v4
         # Step's name
       - name: Use Node.js ${{ matrix.node-version }}
@@ -32,12 +29,18 @@ jobs:
         # The Node.js version to configure
         with:
           node-version: ${{ matrix.node-version }}
-          cache: 'npm'
-      - run: make install
-      - run: make lint
-      #- run: make test-coverage
-      #- run: make gendiff
-      - name: SonarQube Scan
-        uses: SonarSource/sonarqube-scan-action@v5
+
+      - name: npm install, build
+        # Install and build project
+        run: |
+          make install
+          make build
+        # Add environment variables
         env:
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          CI: true
+
+      - name: Run linter
+        run: make lint
+
+      - name: Run tests
+        run: make test
