--- a/package.json
+++ b/package.json
@@ -44,7 +44,6 @@
     "eslint-plugin-jest": "^27.2.1",
     "file-loader": "^6.2.0",
     "globals": "^15.9.0",
-    "html-webpack-plugin": "^5.5.0",
     "jest": "^29.3.1",
     "jest-cli": "^29.3.1",
     "jest-environment-jsdom": "^29.3.1",
@@ -52,10 +51,7 @@
     "postcss-preset-env": "^7.8.3",
     "style-loader": "^3.3.1",
     "url-loader": "^4.1.1",
-    "vite": "^7.2.4",
-    "webpack": "^5.76.0",
-    "webpack-cli": "^5.0.1",
-    "webpack-dev-server": "^4.11.1"
+    "vite": "^7.2.4"
   },
   "dependencies": {
     "npm-check-updates": "^16.6.2",
