--- a/package.json
+++ b/package.json
@@ -1,61 +1,20 @@
 {
-  "name": "webpack-package",
+  "name": "hexlet-code",
   "version": "0.1.0",
-  "description": "",
   "type": "module",
   "scripts": {
-    "test": "jest --colors",
-    "build": "vite build"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/hexlet-boilerplates/webpack-package.git"
-  },
-  "author": "Antonio",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/hexlet-boilerplates/webpack-package/issues"
-  },
-  "homepage": "https://github.com/hexlet-boilerplates/webpack-package#readme",
-  "jest": {
-    "verbose": true,
-    "testEnvironmentOptions": {
-      "url": "http://localhost/"
-    },
-    "testEnvironment": "jsdom"
-  },
-  "main": "src/init.js",
-  "devDependencies": {
-    "@babel/core": "^7.20.12",
-    "@babel/eslint-parser": "^7.19.1",
-    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-    "@babel/preset-env": "^7.20.2",
-    "@eslint/js": "^9.9.1",
-    "ajv": "^8.17.1",
-    "babel-jest": "^29.3.1",
-    "babel-loader": "^9.1.2",
-    "bootstrap": "^5.3.8",
-    "css-loader": "^6.7.3",
-    "debug": "^4.3.4",
-    "eslint": "^8.57.0",
-    "eslint-config-airbnb": "^19.0.4",
-    "eslint-plugin-babel": "^5.3.1",
-    "eslint-plugin-import": "^2.27.4",
-    "eslint-plugin-jest": "^27.2.1",
-    "file-loader": "^6.2.0",
-    "globals": "^15.9.0",
-    "jest": "^29.3.1",
-    "jest-cli": "^29.3.1",
-    "jest-environment-jsdom": "^29.3.1",
-    "postcss-loader": "^7.2.4",
-    "postcss-preset-env": "^7.8.3",
-    "style-loader": "^3.3.1",
-    "url-loader": "^4.1.1",
-    "vite": "^7.2.4"
+    "build": "vite build",
+    "start": "vite",
+    "lint": "eslint .",
+    "test": "echo \"No tests\""
   },
   "dependencies": {
+    "bootstrap": "^5.3.8",
     "npm-check-updates": "^16.6.2",
-    "sass": "^1.57.1",
+    "sass": "^1.57.1"
+  },
+  "devDependencies": {
+    "vite": "^7.2.4",
     "sass-loader": "^13.2.0"
   }
 }
