--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "sass": "^1.57.1"
   },
   "devDependencies": {
-    "vite": "^7.2.4",
-    "sass-loader": "^13.2.0"
+    "postcss-preset-env": "^10.5.0",
+    "sass-loader": "^13.2.0",
+    "vite": "^7.2.4"
   }
 }
