--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "sass": "^1.57.1"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3.3.3",
     "globals": "^16.5.0",
     "postcss-preset-env": "^10.5.0",
     "sass-loader": "^13.2.0",
