--- a/package.json
+++ b/package.json
@@ -15,6 +15,10 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.3",
+    "@eslint/js": "^9.39.1",
+    "eslint": "^8.57.1",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.32.0",
     "globals": "^16.5.0",
     "postcss-preset-env": "^10.5.0",
     "sass-loader": "^13.2.0",
