--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "bootstrap": "^5.3.8",
     "npm-check-updates": "^16.6.2",
-    "sass": "^1.57.1"
+    "sass": "^1.57.1",
+    "yup": "^1.7.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.3",
