--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.8",
+    "i18next": "^25.7.3",
     "npm-check-updates": "^16.6.2",
     "sass": "^1.57.1",
     "yup": "^1.7.1"
