--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "test": "echo \"No tests\""
   },
   "dependencies": {
+    "axios": "^1.13.2",
     "bootstrap": "^5.3.8",
     "i18next": "^25.7.3",
     "npm-check-updates": "^16.6.2",
