--- a/package.json
+++ b/package.json
@@ -19,11 +19,15 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.3",
     "@eslint/js": "^9.39.1",
+    "@stylistic/eslint-plugin": "^5.7.0",
     "eslint": "^8.57.1",
     "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-prettier": "^5.5.4",
     "globals": "^16.5.0",
     "postcss-preset-env": "^10.5.0",
+    "prettier": "^3.7.4",
     "sass-loader": "^13.2.0",
     "vite": "^7.2.4"
   }
