--- a/package.json
+++ b/package.json
@@ -17,10 +17,11 @@
     "yup": "^1.7.1"
   },
   "devDependencies": {
+    "@eslint/compat": "^2.0.1",
     "@eslint/eslintrc": "^3.3.3",
     "@eslint/js": "^9.39.1",
     "@stylistic/eslint-plugin": "^5.7.0",
-    "eslint": "^8.57.1",
+    "eslint": "^9.39.2",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-import": "^2.32.0",
